--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,6 @@ coverage
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
 # node-waf configuration
 .lock-wscript
 
@@ -29,6 +26,8 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+build
+*DS_Store
 
 # Optional npm cache directory
 .npm
