--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "test": "jasmine",
+    "test": "jest",
+    "test:watch": "yarn test -- --watch",
     "dev": "webpack",
     "server": "webpack-dev-server",
     "build": "NODE_ENV=production webpack"
@@ -15,23 +16,42 @@
     "babel": "^6.5.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-regenerator": "^6.24.1",
     "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
-    "jasmine": "^2.5.3",
     "jsdom": "^9.9.1",
+    "node-sass": "^4.5.2",
     "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
+  },
+  "devDependencies": {
+    "enzyme": "^2.8.1",
+    "jest": "^19.0.2",
+    "react-addons-test-utils": "^15.5.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/__tests__/helpers/"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css)$": "identity-obj-proxy"
+    }
   }
 }
