--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "yarn test -- --watch",
-    "dev": "webpack",
-    "server": "webpack-dev-server",
+    "dev": "webpack-dev-server",
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
@@ -29,6 +28,7 @@
     "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.9.1",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
