--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "immutable": "^3.8.1",
     "jsdom": "^9.9.1",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
@@ -50,8 +51,7 @@
       "/__tests__/helpers/"
     ],
     "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css)$": "identity-obj-proxy"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|scss|css)$": "<rootDir>/__mocks__/assetMock.js"
     }
   }
 }
